<resources>
    <string name="app_name">VeneM Poultry</string>
    <string name="welcome_back">Welcome Back!!</string>
    <string name="use_touch_id">Use Touch ID to sign into account</string>
    <string name="default_Web_Id" translatable="false">203323443652-posnaabpporrlvr9j26oc4p6h581k44u.apps.googleusercontent.com</string>
    <string name="or_use_email_and_password_instead">or use email and password instead.</string>
    <string name="enter_farmer_id">Enter Farmer ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="health">Health</string>
    <string name="production">Production</string>
    <string name="settings">Settings</string>
    <string name="maintenance">Maintenance</string>
    <string name="vaccine">Vaccine</string>
    <string name="medication">Medication</string>
    <string name="valuntion_vaccination">Valuntion Vaccination</string>
    <string name="monitored_flock_batches">Monitored Flock Batches</string>
    <string name="_26_dec">26 Dec</string>
    <string name="ongoing_medication_regiments">Ongoing Medication Regiments</string>
    <string name="batch_a">Batch A</string>
    <string name="batch_b">Batch B</string>
    <string name="valuntion">Valuntion</string>
    <string name="ozempic">Ozempic</string>
    <string name="_13_jan">13 Jan</string>
    <string name="next_checkup_dates">Next Checkup Dates</string>
    <string name="vaccination_form">Vaccination Form</string>
    <string name="date">Date</string>
    <string name="disease">Disease</string>
    <string name="description">Description</string>
    <string name="next_checkup_date">Next Checkup Date</string>
    <string name="prescription_instructions">Prescription Instructions</string>
    <string name="medication_form">Medication Form</string>
    <string name="welcome_venem_poultry">Welcome VeneM Poultry</string>
    <string name="use_touch_id_to_sign_create_account">Use Touch ID to sign create account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">Logout</string>
    <string name="manager">Manager</string>
    <string name="amount">Enter Amount</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="expenses">Expenses</string>
    <string name="sales">Sales</string>
    <string name="update">Update</string>
    <string name="enter_amount">  Enter Amount</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string-array name="transaction_type">
        <item>Sales/Expenses</item>
        <item>Sales</item>
        <item>Expense</item>
    </string-array>

    <string-array name="transaction_for_options">
        <item>For</item>
        <item>Business Expenses</item>
        <item>Personal Expenses</item>
        <item>Gift</item>
        <item>Service</item>
        <item>Travel</item>
        <item>Groceries</item>
        <item>Entertainment</item>
        <item>Utilities</item>
        <item>Rent/Mortgage</item>
        <item>Other</item>
    </string-array>
    <string-array name="relatedto">
        <item>Related to</item>
        <item>Maintenance</item>
        <item>Repair</item>
        <item>Cleaning</item>
        <item>Installation</item>
        <item>Other</item>
    </string-array>

    <string-array name="urgencylevel">
        <item>Urgency Level</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="transaction_title_hint">Transaction Title</string>
    <string name="to_hint">To</string>
    <string name="maintenance_form_title">Maintenance Form</string>
    <string name="date_hint">Date (DD/MM/YYYY)</string>
    <string name="issue_title_hint">Issue Title</string>
    <string name="related_to_label">Related To</string>
    <string name="urgency_level_label">Urgency Level</string>
    <string name="description_hint">Description</string>
    <string name="possible_solution_hint">Possible Solution (Optional)</string>
    <string name="submit_button">Submit</string>
    <string name="overall_health">Overall Health</string>
    <string name="flocks">Flocks</string>
    <string name="eggs">Eggs</string>
    <string name="egg_production_this_week">Egg Production this Week:</string>
    <string name="meat_production_this_week">Meat Production this week:</string>
    <string name="dozen_eggs">35 Dozen</string>
    <string name="meat_weight">2 Kg</string>
    <string name="select_batch">Select Batch</string>
    <string name="add_flock">Add Flock</string>
    <string name="fetch_flocks">Fetch Flocks</string>
    <string name="age_in_weeks">Age in Weeks</string>
    <string name="batch_size">Batch Size</string>
    <string name="species">Species</string>
    <string name="issue_title">Issue Title</string>
    <string name="status_pending">Status: Pending</string>
    <string name="category">Category</string>
    <string name="_0_00">$0.00</string>
    <string name="add">Add</string>
    <string name="total_inventory">Total Inventory</string>
    <string name="chicken_image">Chicken Image</string>
    <string name="_45_batches">45 Batches</string>
    <string name="latest_22_september">Latest: 22 September</string>
    <string name="meat_image">Meat Image</string>
    <string name="_30_kg">30 Kg</string>
    <string name="eggs_image">Eggs Image</string>
    <string name="_35_dozen">35 Dozen</string>
    <string name="feed_image">Feed Image</string>
    <string name="_10_kg">10 Kg</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="maintenance_issues">Maintenance Issues</string>
    <string name="register_account">Register Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="farmer">Farmer</string>
    <string name="register">Register</string>
    <string name="already_registered_sign_in">Already registered? Sign In</string>
    <string name="select_date">Select Date</string>
    <string name="save">Save</string>
    <string name="dashboard">Dashboard</string>
    <string name="reports">Reports</string>
    <string name="inventory">Inventory</string>
    <string name="finances">Finances</string>
    <string name="profile_image">Profile Image</string>
    <string name="andrew_tate">Andrew Tate</string>
    <string name="drewtate_what_com">drewTate@what.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="manager_section">Manager Section</string>
    <string name="prescription">Prescription</string>
    <string name="medication_name">Medication Name</string>
    <string name="total_production">Total Production</string>
    <string name="_20">20</string>
    <string name="_45">45</string>
    <string name="biometrics">Biometrics</string>
    <string name="date_01_01_2024">Date: 01/01/2024</string>
    <string name="_70">70%</string>
    <string name="_50">50%</string>
    <string name="Feeding_dates">Feeding Dates</string>
</resources>