<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".VaccinationsActivity">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/medication_form"
        android:textColor="#0A70C1"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Date Input Field -->
    <EditText
        android:id="@+id/vaccination_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:textColor="@color/black"
        android:padding="12dp"
        android:textColorHint="#8A8A8A"
        android:background="@drawable/input_background"
        android:layout_marginBottom="16dp" />

    <!-- Disease Input Field -->
    <EditText
        android:id="@+id/disease_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/disease"
        android:padding="12dp"
        android:textColorHint="#8A8A8A"
        android:background="@drawable/input_background"
        android:layout_marginBottom="16dp" />

    <!-- Batch Affected Dropdown -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <AutoCompleteTextView
            android:id="@+id/batch_affected_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_batch"
            android:padding="12dp"
            android:background="@drawable/input_background"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Description Input Field -->
    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/description"
        android:padding="12dp"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:gravity="top|start"
        android:textColorHint="#8A8A8A"
        android:background="@drawable/input_background"
        android:layout_marginBottom="16dp" />

    <!-- Medication Input Field -->
    <EditText
        android:id="@+id/medication_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/medication"
        android:padding="12dp"
        android:textColorHint="#8A8A8A"
        android:background="@drawable/input_background"
        android:layout_marginBottom="30dp" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/vaccination_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/UI"
        android:elevation="4dp"
        android:padding="16dp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

</LinearLayout>
